--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <span class="material-icons"> format_align_right </span>
     </div>
     <div class="formula_actions_cont">
-      <input type="text" readonl class="address_bar">
+      <input type="text" readonly class="address_bar">
       <img class="formula_icon" src="https://img.icons8.com/ios/50/000000/formula-fx.png" />
       <input type="text" class="formula_bar">
     </div>
